Section 2 complete, section 3 under re-work

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body onresize="resizefunc()">
 	
 	<header id = "section1">
-		<div class = "banner parallax">
+		<div class = "banner parallax1">
 			<div>
 				<h1>
 					"Challange 1"
@@ -149,21 +149,16 @@
 
 	<div id = "section3">
 		<section class = "section3_area1">
-			<!--
-				*
-				*
-				*
-				*
-				*
-				*
-				ADD STUFF HERE!
-				*
-				*
-				*
-				*
-				*
-				*
-			!-->
+			<div class = "parallax2">
+				<div>
+					<h2>
+						"Our Services"
+					</h2>
+					<p>
+						Nunc diam leo, fringilla vulputate elit lobortis, consectetur vestibulum quam. Sed id <br>felis ligula. In euismod libero at magna dapibus, in rutrum velit lacinia. <br> Etiam a mi quis arcu varius condimentum
+					</p>
+				</div>
+			</div>
 		</section>
 		<section class = "section3_area2">
 			<div class = "material_holder_outer flex_holder">
@@ -240,32 +235,29 @@
 
 	<div id = "section4">
 		<section class = section4_area1>
-			<div class = "material_holder_outer">
-				<div class = "material_holder_inner">
-					<div class = "content_holder_outer 1_col">
-						<div class = "content_holder_inner">
-							<h2>
-								Column 1
-							</h2>
+			<div class = "material_holder_outer parallax3 flex_holder">
+				<div class = "material_holder_inner col_1_medium">
+					<h2 class = "full">
+						Contact Form
+					</h2>
+					<div class = "content_holder_outer full">
+						<div class = "content_holder_inner full">
+							
 							<p>
-								“Conquer is free Bootstrap template from templatemo website. 
-								<br>
-								No backlink is required to use this layout.”
+								Nunc diam leo, fringilla vulputate elit lobortis, consectetur vestibulum quam. Sed id <br>felis ligula. In euismod libero at magna dapibus, in rutrum velit lacinia. <br> Etiam a mi quis arcu varius condimentum. 
 							</p>
 						</div>
 					</div>
 				</div>
-				<div class = "material_holder_inner">
-					<div class = "content_holder_outer col_2">
+				<div class = "material_holder_inner col_2">
+					<div class = "content_holder_outer col_2_s2">
 						<div class = "content_holder_inner">
-							<input type="name" value = "Name">
-							<input type="email" value = "Email">
-							<input type="subject" value = "Subject">
+							<form>
+								name <input type="name" value = "Name"> <br>
+								<input type="email" value = "Email"> <br>
+								<input type="subject" value = "Subject">
+							</form>
 						</div>
-					</div>
-				</div>
-				<div class = "material_holder_inner">
-					<div class = "content_holder_outer col_2">
 						<div class = "content_holder_inner">
 							<textarea>
 
