--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700' rel='stylesheet' type='text/css'>
 	<veiwport>
 	</veiwport>
+	<!--- Remaining Tasks
+		1) Better words
+		2) working links
+		3) Upload
+		4?) CSS smooth scrolling
+		5?) Send form emails things to me
+	-->
 </head>
 <body onresize="resizefunc()">
 	
@@ -136,8 +143,8 @@
 								<br>
 								Vestibulum vel mauris at erat mattis accumsan et ac lorem. Cras non venenatis orci, sed tincidunt massa. Duis nisl lectus, auctor eu sodales at, dignissim eu orci. Sed vitae venenatis magna, in blandit metus.
 							</p>
-							<a>
-								Link to my work
+							<a class = "grey_button">
+								my work
 							</a>
 						</div>
 					</div>
@@ -235,38 +242,38 @@
 
 	<div id = "section4">
 		<section class = section4_area1>
-			<div class = "material_holder_outer parallax3 flex_holder">
-				<div class = "material_holder_inner col_1_medium">
-					<h2 class = "full">
-						Contact Form
-					</h2>
-					<div class = "content_holder_outer full">
-						<div class = "content_holder_inner full">
-							
+			<div class = "material_holder_outer">
+				<div class = "material_holder_inner parallax3">
+					<div class = "material_holder_outer flex">
+						<div class = "col_1_medium">
+							<h2 class = "full">
+								Contact Form
+							</h2>
+						</div>
+					</div>
+					<div class = "content_holder_outer flex">
+						<div class = "content_holder_inner col_1_medium margin_sides_15">
 							<p>
-								Nunc diam leo, fringilla vulputate elit lobortis, consectetur vestibulum quam. Sed id <br>felis ligula. In euismod libero at magna dapibus, in rutrum velit lacinia. <br> Etiam a mi quis arcu varius condimentum. 
+								Nunc diam leo, fringilla vulputate elit lobortis, consectetur vestibulum quam. Sed id <br>felis ligula. In euismod libero at magna dapibus, in rutrum velit lacinia. <br> Etiam a mi quis arcu varius condimentum.
 							</p>
 						</div>
 					</div>
-				</div>
-				<div class = "material_holder_inner col_2">
-					<div class = "content_holder_outer col_2_s2">
-						<div class = "content_holder_inner">
-							<form>
-								name <input type="name" value = "Name"> <br>
-								<input type="email" value = "Email"> <br>
-								<input type="subject" value = "Subject">
-							</form>
+					<form class = "content_holder_outer flex margin_top_30">
+						<div class = "content_holder_inner col_2_s2">
+							<input class = "full input" type="text" value = "Name"> <br>
+							<input class = "full input" type="email" value = "Email"> <br>
+							<input class = "full input" type="subject" value = "Subject">
 						</div>
-						<div class = "content_holder_inner">
-							<textarea>
-
+						<div class = "content_holder_inner col_2_s2">
+							<textarea class = "col_2_s2 input full">Your message here... 
 							</textarea>
-							<button>
-								send
-							</button>
+							<div class="full">
+								<button class = "input left black_button">
+									Send
+								</button>
+							</div>
 						</div>
-					</div>
+					</form>
 				</div>
 			</div>
 		</section>
@@ -276,24 +283,16 @@
 	<footer id = "section5">
 		<div class = "material_holder_outer">
 			<div class = "material_holder_inner">
-				<div class = "content_holder_outer 1_col">
+				<div class = "content_holder_outer 1_col padding_top_45">
 					<div class = "content_holder_inner">
-						<h2>
+						<h2 >
 							Column 1
 						</h2>
-						<p>
+						<p class = "border_bottom_sm">
 							“Conquer is free Bootstrap template from templatemo website. 
 							<br>
 							No backlink is required to use this layout.”
 						</p>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class = "material_holder_outer">
-			<div class = "material_holder_inner">
-				<div class = "content_holder_outer 1_col">
-					<div class = "content_holder_inner">
 						<p>
 							Copyright © 2084 Your Company Name | Design: template mo  | Implementation Cayla Savitzky
 						</p>
