--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 	<veiwport>
 	</veiwport>
 	<!--- Remaining Tasks
+		0) fix div.nav to get parallax2 working right
 		1) Better words
 		2) working links
+		2.5) Make parallax1 less wiggly
 		3) Upload
 		4?) CSS smooth scrolling
 		5?) Send form emails things to me
@@ -18,16 +20,13 @@
 <body onresize="resizefunc()">
 	
 	<header id = "section1">
-		<div class = "banner parallax1">
+		<div class = "parallax1">
 			<div>
 				<h1>
-					"Challange 1"
+					Challange
 				</h1>
 				<h4>
 					Just css3, html5, and javascript
-				</h4>
-				<h4>
-					~ Still functional with javascript disabled~
 				</h4>
 			</div>
 		</div>
