--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
-<html lang=en>
+
+<html lang="en">
 <head>
-	<meta>
-	<meta name="viewport" content="width=device-width,initial-scale=1">
+	<title> Conquer Remake </title>
+
+	<meta name="robots" content="index, follow" />
+	<meta charset="UTF-8">
+	<link rel="canonical" href="" />
+	<meta name="keywords" content="Framework CSS CSS3 HTML HTML5 Javascript Cayla Savitzky">
+	<meta name = "description" content = "Conquer's design and content is built to mimic a free Bootstrap template from templatemo website. This is a demo page by Cayla Savitzky, built without any framework">
+	<meta name="author" content="Cayla Savitzky">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link href="https://fonts.googleapis.com/css?family=Archivo+Narrow" rel="stylesheet">
 	<link rel = "stylesheet" type = "text/css" href = "style.css" />
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700' rel='stylesheet' type='text/css'>
@@ -287,7 +295,7 @@
 							Column 1
 						</h2>
 						<p class = "border_bottom_sm">
-							“Conquer is free Bootstrap template from templatemo website. 
+							"Conquer"'s design and content is built to mimic a free Bootstrap template from templatemo website. 
 							<br>
 							No backlink is required to use this layout.”
 						</p>
