--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+<!doctype html>
 <html lang="en">
 <head>
 	<title> Conquer Remake </title>
@@ -150,7 +150,7 @@
 								Vestibulum vel mauris at erat mattis accumsan et ac lorem. Cras non venenatis orci, sed tincidunt massa. Duis nisl lectus, auctor eu sodales at, dignissim eu orci. Sed vitae venenatis magna, in blandit metus.
 							</p>
 							<a class = "grey_button">
-								my work
+								blandit metus.
 							</a>
 						</div>
 					</div>
